second commit of factorial using dom

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
        fact=1
 
        for(;num>0;num--){
-        fact*=num  //fact=fact*num
+        fact*=num  
      }
      alert(`The factorial of the given number is: ${fact}`)
     }
